--- a/css/styles.css
+++ b/css/styles.css
@@ -4,28 +4,28 @@
 /*usamos el selector universal para afectar a todos los elementos*/
 
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
-    
+
 
 }
 
 /*se importó de google font lato la versión normal (400) y bold (700)*/
 
-body{
+body {
     max-width: 1200px;
     margin: auto;
     background: #fbfbfb;
     font-family: 'Lato', sans-serif;
     font-size: 18px;
-    
+
 }
 
 
-header{
+header {
     background: #fff;
     display: flex;
     align-items: center;
@@ -38,30 +38,29 @@ header{
     left: 0;
     box-shadow: 0px 2px 5px #5f5f5f;
 
+
 }
 
 
 /*la imagen del logo es grande y se le colocó unas propiedades para ajustarla a la página*/
-img{
+img {
     max-width: 50%;
-}
-
-.im-fig-logo{
-    margin-top: 12px;
-    margin-left: 12px;
 
 }
 
-    
+.im-fig-logo {
+    margin-top: 5px
+}
 
-#inicio{
-    justify-content: space-araund; 
+
+#inicio {
+    justify-content: space-araund;
 }
 
 
 /*se aplica estilos a un elemento que estén específicamente dentro de otro*/
 
-ul{
+ul {
     display: flex;
     justify-content: end;
     align-items: center;
@@ -71,22 +70,24 @@ ul{
 }
 
 
-ul li{
+ul li {
     padding: 18px;
     display: inline-block;
 
 }
 
-a{
+a {
     font-size: 26px;
     text-decoration: none;
     color: black;
 
 }
- main{
+
+main {
     display: block;
     max-width: 1200px;
     margin: auto;
+
 }
 
 section {
@@ -103,14 +104,14 @@ section {
 
 }
 
-h1{
-   font-size: 36px;
-} 
+h1 {
+    font-size: 36px;
+}
 
 
 /*se tomo foto de perfil de la persona del curriculum vitae*/
 
-.foto-perfil{
+.foto-perfil {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -118,18 +119,18 @@ h1{
 
 }
 
-.foto-perfil{
+.foto-perfil {
     width: 100%;
     border-radius: 50%;
     margin-top: 4rem;
     margin-bottom: 0.5rem;
     max-width: 250px;
     object-fit: contain;
-    
+
 }
 
 
-p{
+p {
     margin: 16px 0;
     line-height: 1.2;
     text-align: center;
@@ -138,7 +139,7 @@ p{
 }
 
 
-.btn{
+.btn {
     background-color: #af599e;
     color: #fbfbfb;
     padding: 12px 20px;
@@ -150,8 +151,7 @@ p{
 }
 
 
-h2{
-    font-family: 'Lato', sans-serif;
+h2 {
     font-size: 28px;
     text-align: center;
     margin-top: 10px;
@@ -159,14 +159,14 @@ h2{
 }
 
 
-#contacto{
+#contacto {
     background-color: rgba(175, 89, 158, 0.3);
     color: #0f0f0f;
-    
+
 }
 
 
-.icono{
+.icono {
     display: flex;
 
 
@@ -193,4 +193,136 @@ p{
 
 }
 
+/*mobile*/
 
+section {
+    display: flex;
+    flex-direction: column;
+    }
+
+h1{ 
+    font-size: 36px;
+    }
+
+
+/* tablet  */
+
+@media (min-width: 768px) {
+
+    section {
+    flex-direction: row;
+}
+
+
+h1{
+    font-size: 36px;
+}
+
+/* Estableciendo altura, dirección de texto y el padding de datos personales*/
+.datos {
+    width: 60%;
+    text-align: left;
+    padding: 30px;
+
+}
+
+
+
+/* desktop */
+
+/*colocandole el margin y padding a la @mediaqueri para escritorio*/
+
+@media (min-width: 1024px) {
+        
+    }
+
+/* Selector universal para pantalla de escritorio*/
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+
+    /* nuevas medidas del body*/
+    body {
+        max-width: 800px;
+        width: 100%;
+        margin: auto;
+        font-family: 'Cormorant Infant', serif;
+    }
+
+    /* Margin del main*/
+    main {
+        margin: auto;
+       
+    }
+
+    /* Medidas del deader */
+    header {
+        height: 60px;
+        justify-content: space-around;
+    }
+  
+    /* Nueva disrección de la página en escritorio*/
+    section#inicio {
+        flex-direction: row;
+    
+    }
+    
+    /* Nueva medida de letra y alineación de texto*/
+    h1 {
+        font-size: 48px;
+        text-align: left;
+         
+    }
+
+    /* Alineación de párrafo*/
+    p{
+        text-align: left;
+    }
+
+    .datos {
+        width: 80%;
+        text-align: left;
+   
+        
+    }   
+
+    /* Cambio de color del botón*/
+    .btn {
+        margin-top: 0px;
+        background-color: #FFD8BE;
+        color: #0f0f0f;
+           
+    }
+
+    /* Nuevo tamaño de letra de h2*/
+    h2 {
+        font-size: 32px;
+    }
+
+    /* Cambio de color de contacto*/
+    .contacto {
+        padding: 16px 0;
+        background-color: #FFEEDD;
+        text-align: center;
+
+    } 
+
+    /* Modificación de las medidas del footer y cambio de color */
+    .footer {
+        width: 100%;
+        max-width: 1200px;
+        background-color: #FFD8BE;
+        color: #0f0f0f;
+    }
+
+}
+    /* Dandolé actividad a los botones de inicio y contacto con javascript */
+
+li.menu-item:hover,
+li.menu-item a.active,
+a.btn:hover {
+    background: #FFD8BE;
+    transition: background-color 0.5s;
+    padding: 5px;}
